@@ -20,7 +20,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.Matchers.eq;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.io.IOException;
@@ -36,7 +35,9 @@ import org.apache.hadoop.hdfs.security.token.delegation.DelegationTokenIdentifie
 import org.apache.hadoop.hdfs.tools.DelegationTokenFetcher;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.security.Credentials;
+import org.apache.hadoop.security.UserGroupInformation;
 import org.apache.hadoop.security.token.Token;
+import org.apache.hadoop.security.token.TokenRenewer;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -45,6 +46,7 @@ public class TestDelegationTokenFetcher {
   private Configuration conf;
   private URI uri;
   private static final String SERVICE_VALUE = "localhost:2005";
+  private static final Text KIND = new Text("TESTING-TOKEN-KIND");
 
   @Before 
   public void init() throws URISyntaxException, IOException {
@@ -54,6 +56,37 @@ public class TestDelegationTokenFetcher {
     FileSystem.addFileSystemForTesting(uri, conf, dfs);
   }
   
+  public static class FakeRenewer extends TokenRenewer {
+    static Token<?> lastRenewed = null;
+    static Token<?> lastCanceled = null;
+
+    @Override
+    public boolean handleKind(Text kind) {
+      return KIND.equals(kind);
+    }
+
+    @Override
+    public boolean isManaged(Token<?> token) throws IOException {
+      return true;
+    }
+
+    @Override
+    public long renew(Token<?> token, Configuration conf) {
+      lastRenewed = token;
+      return 0;
+    }
+
+    @Override
+    public void cancel(Token<?> token, Configuration conf) {
+      lastCanceled = token;
+    }
+    
+    public static void reset() {
+      lastRenewed = null;
+      lastCanceled = null;
+    }
+  }
+
   /**
    * Verify that when the DelegationTokenFetcher runs, it talks to the Namenode,
    * pulls out the correct user's token and successfully serializes it to disk.
@@ -62,15 +95,17 @@ public class TestDelegationTokenFetcher {
   public void expectedTokenIsRetrievedFromDFS() throws Exception {
     final byte[] ident = new byte[]{1,2,3,4};
     final byte[] pw = new byte[]{42};
-    final Text kind = new Text("MY-KIND");
     final Text service = new Text(uri.toString());
+    final String user = 
+        UserGroupInformation.getCurrentUser().getShortUserName();
 
     // Create a token for the fetcher to fetch, wire NN to return it when asked
     // for this particular user.
     Token<DelegationTokenIdentifier> t = 
-      new Token<DelegationTokenIdentifier>(ident, pw, kind, service);
-    when(dfs.getDelegationToken((String) null)).thenReturn(t);
+      new Token<DelegationTokenIdentifier>(ident, pw, KIND, service);
+    when(dfs.getDelegationToken(eq(user))).thenReturn(t);
     when(dfs.renewDelegationToken(eq(t))).thenReturn(1000L);
+    FakeRenewer.reset();
     
     DelegationTokenFetcher.main(new String[]{"-fs", uri.toString(), 
                                              "file.dta"});
@@ -83,13 +118,12 @@ public class TestDelegationTokenFetcher {
     assertEquals(t, itr.next());
     assertTrue(!itr.hasNext());
 
-    DelegationTokenFetcher.main(new String[]{"-fs", uri.toString(), 
-                                             "--renew", "file.dta"});
+    DelegationTokenFetcher.main(new String[]{"--renew", "file.dta"});
+    assertEquals(t, FakeRenewer.lastRenewed);
+    FakeRenewer.reset();
 
-    DelegationTokenFetcher.main(new String[]{"-fs", uri.toString(), 
-                                             "--cancel", "file.dta"});
-    verify(dfs).renewDelegationToken(eq(t));
-    verify(dfs).cancelDelegationToken(eq(t));
+    DelegationTokenFetcher.main(new String[]{"--cancel", "file.dta"});
+    assertEquals(t, FakeRenewer.lastCanceled);
   }
 
 }
