@@ -148,6 +148,9 @@ Release 0.20.205.0 - 2011.09.12
     HADOOP-7625. Fix TestDelegationToken by having DFSClient set the service
     correctly and having the test cases use the common jar. (omalley)
 
+    HADOOP-7644. Fix TestDelegationTokenRenewal and TestDelegationTokenFetcher
+    to use and test the new style renewers. (omalley)
+
   IMPROVEMENTS
 
     MAPREDUCE-2187. Reporter sends progress during sort/merge. (Anupam Seth via
